testsuite/tests/dependent/should_fail/BadTelescope2.stderr

BadTelescope2.hs:9:8: error:
    • These kind and type variables: a k (b :: k)
      are out of dependency order. Perhaps try this ordering:
        k (a :: k) (b :: k)
    • In the type signature: foo :: forall a k (b :: k). SameKind a b
